--- a/package.json
+++ b/package.json
@@ -1,28 +1,17 @@
 {
-  "name": "code-compiler",
+  "name": "codex-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "src/index.js",
   "scripts": {
-    "start": "concurrently \"node server.js\" \"node worker.js\"",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Jaagrav Seal",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "bull": "^4.16.5",
-    "bullmq": "^5.58.5",
     "cors": "^2.8.5",
-    "dockerode": "^4.0.8",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "ioredis": "^5.7.0",
-    "redis": "^5.8.2",
+    "express": "^4.18.1",
     "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "concurrently": "^9.2.1"
   }
 }
